--- a/battery-quality-test-lab.html
+++ b/battery-quality-test-lab.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Title -->
-  <title>Battery Test Quality Lab | Lithium Battery Testing Solutions - Indygreen Technologies</title>
+  <title>Battery Test Quality Lab | Lithium Testing Solutions – Indygreen</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies offers advanced Battery Test Quality Labs equipped with precision testing systems for lithium cells, battery packs, and modules to ensure safety, reliability, and performance compliance."/>
@@ -18,7 +18,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Battery Test Quality Lab | Lithium Battery Testing Solutions"/>
+  <meta property="og:title" content="Battery Test Quality Lab | Lithium Testing Solutions – Indygreen"/>
   <meta property="og:description" content="Comprehensive lithium battery test quality labs by Indygreen Technologies for accurate testing of cells, modules, and packs to meet global performance and safety standards."/>
   <meta property="og:url" content="https://www.indygreentech.com/battery-test-quality-lab.html"/>
   <meta property="og:type" content="website"/>
@@ -26,7 +26,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Battery Test Quality Lab | Lithium Battery Testing Solutions"/>
+  <meta name="twitter:title" content="Battery Test Quality Lab | Lithium Testing Solutions – Indygreen"/>
   <meta name="twitter:description" content="Indygreen Technologies provides fully equipped Battery Test Quality Labs for accurate testing and validation of lithium-ion cells, modules, and packs."/>
 
   <!-- Canonical -->
