--- a/belt-separator.html
+++ b/belt-separator.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Battery Separator for Lithium Cell Lines | Indygreen Technologies</title>
+<title>Battery Separator for Lithium Cell Lines | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies supplies high-quality belt separators for lithium Cell Lines — ensuring precise separation, safety, and performance for cylindrical, prismatic, and pouch cells."/>
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/belt-separator.html"/>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Battery Separator for Lithium Cell Lines | Indygreen Technologies"/>
+<meta property="og:title" content="Battery Separator for Lithium Cell Lines | Indygreen"/>
 <meta property="og:description" content="Premium belt separators for lithium battery production — designed for accurate cell separation, enhanced safety, and optimal performance in all battery types."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/belt-separator.html"/>
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="Battery Separator for Lithium Cell Lines | Indygreen Technologies"/>
+<meta name="twitter:title" content="Battery Separator for Lithium Cell Lines | Indygreen"/>
 <meta name="twitter:description" content="High-quality belt separators for lithium Cell Lines — ensuring safety, performance, and precise separation for cylindrical, prismatic, and pouch cells."/>
 <meta name="twitter:image" content="https://www.indygreentech.com/images/belt-separator.png"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
