--- a/bess-container-assembly-lines.html
+++ b/bess-container-assembly-lines.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>BESS Container Assembly Lines for Lithium Battery Lines | Indygreen Technologies</title>
+<title>BESS Container Assembly Lines for Lithium Batteries | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies provides advanced BESS container assembly lines for Lithium Battery Lines systems — ensuring efficient assembly, testing, and integration of battery packs for renewable energy, industrial, and commercial applications."/>
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/bess-container-assembly-lines.html"/>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="BESS Container Assembly Lines for Lithium Battery Lines | Indygreen Technologies"/>
+<meta property="og:title" content="BESS Container Assembly Lines for Lithium Batteries | Indygreen"/>
 <meta property="og:description" content="High-efficiency BESS container assembly lines for lithium batteries — designed for assembly, testing, and integration of battery packs in containerized energy storage systems."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/bess-container-assembly-lines.html"/>
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="BESS Container Assembly Lines for Lithium Battery Lines | Indygreen Technologies"/>
+<meta name="twitter:title" content="BESS Container Assembly Lines for Lithium Batteries | Indygreen"/>
 <meta name="twitter:description" content="Advanced BESS container assembly lines for Lithium Battery Lines — ensuring efficient assembly, testing, and integration for industrial, commercial, and renewable energy applications."/>
 <meta name="twitter:image" content="https://www.indygreentech.com/images/bess-container-assembly-line.png"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
