--- a/bess-cooling-system.html
+++ b/bess-cooling-system.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <!-- Title -->
-  <title>BESS Cooling System | Thermal Management for Energy Storage - Indygreen Technologies</title>
+  <title>BESS Cooling System | Thermal Management for Energy Storage – Indygreen</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies provides advanced BESS cooling systems designed for safe, efficient, and reliable thermal management of energy storage and lithium battery systems in C&I and utility applications."/>
@@ -18,7 +18,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="BESS Cooling System | Thermal Management for Energy Storage"/>
+  <meta property="og:title" content="BESS Cooling System | Thermal Management for Energy Storage – Indygreen"/>
   <meta property="og:description" content="Advanced BESS cooling and thermal management systems by Indygreen Technologies ensure reliable temperature control for large-scale energy storage and lithium battery systems."/>
   <meta property="og:url" content="https://www.indygreentech.com/bess-cooling-system.html"/>
   <meta property="og:type" content="website"/>
@@ -26,7 +26,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="BESS Cooling System | Thermal Management for Energy Storage"/>
+  <meta name="twitter:title" content="BESS Cooling System | Thermal Management for Energy Storage – Indygreen"/>
   <meta name="twitter:description" content="Indygreen Technologies offers efficient BESS cooling systems for energy storage, ensuring thermal stability and battery safety for C&I and utility-scale projects."/>
 
   <!-- Canonical -->
