--- a/bms.html
+++ b/bms.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <head>
-  <title>Battery Management System (BMS) | Smart Power Control Solutions - Indygreen Technologies</title>
+  <title>Battery Management System (BMS) | Smart Power Control – Indygreen</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies offers advanced Battery Management Systems (BMS) for lithium-ion batteries used in EVs, ESS, and industrial applications. Ensure safety, efficiency, and long battery life with our intelligent BMS solutions."/>
@@ -18,7 +18,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Battery Management System (BMS) | Smart Power Control Solutions"/>
+  <meta property="og:title" content="Battery Management System (BMS) | Smart Power Control – Indygreen"/>
   <meta property="og:description" content="Explore high-performance Battery Management Systems from Indygreen Technologies for EVs, ESS, and lithium battery applications ensuring protection, performance, and data monitoring."/>
   <meta property="og:url" content="https://www.indygreentech.com/bms.html"/>
   <meta property="og:type" content="website"/>
@@ -26,7 +26,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Battery Management System (BMS) | Smart Power Control Solutions"/>
+  <meta name="twitter:title" content="Battery Management System (BMS) | Smart Power Control – Indygreen"/>
   <meta name="twitter:description" content="Indygreen Technologies provides intelligent BMS solutions for lithium-ion batteries in EVs, ESS, and industrial systems with safety and performance optimization."/>
 
   <!-- Canonical -->
