--- a/career.html
+++ b/career.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Title -->
- <title>Careers at Indygreen Technologies - Join Our Renewable Energy Team</title>
+ <title>Careers at Indygreen Technologies | Join Our Energy Team</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Explore career opportunities at Indygreen Technologies. We are hiring passionate professionals in solar, lithium battery, EV mobility, and . Join us and build a sustainable future."/>
@@ -18,7 +18,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Careers at Indygreen Technologies - Renewable Energy Jobs"/>
+  <meta property="og:title" content="Careers at Indygreen Technologies | Join Our Energy Team"/>
   <meta property="og:description" content="Join Indygreen Technologies and work on solar, battery, EV, and hydrogen projects. Explore exciting career opportunities today."/>
   <meta property="og:url" content="https://www.indygreentech.com/career.html"/>
   <meta property="og:type" content="website"/>
@@ -26,7 +26,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Careers at Indygreen Technologies - Renewable Energy Jobs"/>
+  <meta name="twitter:title" content="Careers at Indygreen Technologies | Join Our Energy Team"/>
   <meta name="twitter:description" content="We are hiring! Explore renewable energy job openings in solar, lithium batteries, EV mobility & hydrogen at Indygreen Technologies."/>
 
   <!-- Canonical -->
