--- a/cell-testers-for-prismatic.html
+++ b/cell-testers-for-prismatic.html
@@ -5,7 +5,7 @@
 <!-- Title -->
 <head>
   <!-- Title -->
-  <title>Prismatic Battery Cell Tester | Precision Testing Solutions - Indygreen Technologies</title>
+  <title>Prismatic Battery Cell Tester | Precision Testing – Indygreen</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies provides advanced prismatic battery cell testers designed for accurate capacity, voltage, and performance evaluation, ensuring superior lithium battery quality and reliability."/>
@@ -21,7 +21,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Prismatic Battery Cell Tester | Precision Testing Solutions"/>
+  <meta property="og:title" content="Prismatic Battery Cell Tester | Precision Testing – Indygreen"/>
   <meta property="og:description" content="High-accuracy prismatic cell testers for lithium battery manufacturing – Indygreen Technologies ensures consistent quality and reliability through advanced testing automation."/>
   <meta property="og:url" content="https://www.indygreentech.com/cell-tester-for-prismatic.html"/>
   <meta property="og:type" content="website"/>
@@ -29,7 +29,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Prismatic Battery Cell Tester | Precision Testing Solutions"/>
+  <meta name="twitter:title" content="Prismatic Battery Cell Tester | Precision Testing – Indygreen"/>
   <meta name="twitter:description" content="Advanced prismatic battery cell testers by Indygreen Technologies for capacity, voltage, and performance validation of lithium batteries."/>
 
   <!-- Canonical -->
