--- a/cell-testers.html
+++ b/cell-testers.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Cell Testers for Lithium Battery Manufacturing | Indygreen Technologies</title>
+<title>Cell Testers for Lithium Battery Manufacturing | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies provides advanced cell testers for lithium battery manufacturing and quality analysis — ensuring accurate capacity, voltage, and performance testing for cylindrical, prismatic, and pouch cells."/>
