--- a/electrolyte.html
+++ b/electrolyte.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Electrolyte for Lithium Cell Lines | Indygreen Technologies</title>
+<title>Electrolyte for Lithium Cell Lines | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies supplies high-quality electrolytes for lithium Cell Lines — ensuring optimal ion conductivity, stability, and performance for cylindrical, prismatic, and pouch cells."/>
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/electrolyte.html"/>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Electrolyte for Lithium Cell Lines | Indygreen Technologies"/>
+<meta property="og:title" content="Electrolyte for Lithium Cell Lines | Indygreen"/>
 <meta property="og:description" content="Premium electrolytes for lithium battery production — designed for superior ion conductivity, stability, and performance in cylindrical, prismatic, and pouch cells."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/electrolyte.html"/>
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="Electrolyte for Lithium Cell Lines | Indygreen Technologies"/>
+<meta name="twitter:title" content="Electrolyte for Lithium Cell Lines | Indygreen"/>
 <meta name="twitter:description" content="High-quality electrolytes for lithium battery production — ensuring optimal ion conductivity, stability, and performance across all battery types."/>
 <meta name="twitter:image" content="https://www.indygreentech.com/images/electrolyte.png"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
