--- a/fully-auto-lines.html
+++ b/fully-auto-lines.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Fully Auto Solar PV Production Lines | Indygreen Technologies</title>
+<title>Fully Auto Solar PV Production Lines | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies offers advanced Fully Auto Lines for solar PV production, providing fully automated, precise, and high-efficiency solutions for solar panel and module assembly."/>
@@ -19,7 +19,7 @@
 <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
 <!-- Open Graph -->
-<meta property="og:title" content="Fully Auto Solar PV Production Lines | Indygreen Technologies"/>
+<meta property="og:title" content="Fully Auto Solar PV Production Lines | Indygreen"/>
 <meta property="og:description" content="Indygreen Technologies provides Fully Auto Lines for efficient solar PV production, offering automated solutions for solar panel and module assembly."/>
 <meta property="og:url" content="https://www.indygreentech.com/fully-auto-lines.html"/>
 <meta property="og:type" content="website"/>
@@ -27,7 +27,7 @@
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="Fully Auto Solar PV Production Lines | Indygreen Technologies"/>
+<meta name="twitter:title" content="Fully Auto Solar PV Production Lines | Indygreen"/>
 <meta name="twitter:description" content="Advanced Fully Auto Lines by Indygreen Technologies for fully automated, precise, and high-efficiency solar panel and module assembly."/>
 
 <!-- Canonical -->
