--- a/giga-factories.html
+++ b/giga-factories.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Giga Factories for Lithium Cell Lines | Indygreen Technologies</title>
+<title>Giga Factories for Lithium Cell Lines | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies supports the design and implementation of giga factories for Lithium Cell Lines — enabling large-scale, high-efficiency manufacturing of cylindrical, prismatic, and pouch cells with advanced automation and quality control."/>
