--- a/lab-pilot-lines.html
+++ b/lab-pilot-lines.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Lab & Pilot Lines for Lithium Battery Development | Indygreen Technologies</title>
+<title>Lab & Pilot Lines for Lithium Battery Development | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies offers lab and pilot lines for lithium battery research and development — enabling small-scale production, testing, and process optimization for cylindrical, prismatic, and pouch cells."/>
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/lab-pilot-lines.html"/>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Lab & Pilot Lines for Lithium Battery Development | Indygreen Technologies"/>
+<meta property="og:title" content="Lab & Pilot Lines for Lithium Battery Development | Indygreen"/>
 <meta property="og:description" content="High-precision lab and pilot lines for lithium battery development — supporting R&D, small-scale production, testing, and process optimization."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/lab-pilot-lines.html"/>
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="Lab & Pilot Lines for Lithium Battery Development | Indygreen Technologies"/>
+<meta name="twitter:title" content="Lab & Pilot Lines for Lithium Battery Development | Indygreen"/>
 <meta name="twitter:description" content="Advanced lab and pilot lines for lithium battery R&D — enabling small-scale production, testing, and process optimization for all types of cells."/>
 <meta name="twitter:image" content="https://www.indygreentech.com/images/lab-pilot-line.png"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
