--- a/laser-welding-machines.html
+++ b/laser-welding-machines.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Laser Welding Machines for Prismatic Battery Assembly | Indygreen Technologies</title>
+<title>Laser Welding Machines for Prismatic Battery Assembly | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies offers high-precision laser welding machines for lithium battery assembly — ensuring strong, accurate, and efficient welds for cylindrical, prismatic, and pouch cells in automated production lines."/>
