--- a/lib-separator-lines.html
+++ b/lib-separator-lines.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>LIB Separator Lines for Lithium Battery Cell Lines | Indygreen Technologies</title>
+<title>LIB Separator Lines for Lithium Battery Cell Lines | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies provides high-precision LIB separator lines for lithium battery cell lines — ensuring consistent separator production and quality control for cylindrical, prismatic, and pouch cells."/>
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/lib-separator-lines.html"/>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="LIB Separator Lines for Lithium Battery Cell Lines | Indygreen Technologies"/>
+<meta property="og:title" content="LIB Separator Lines for Lithium Battery Cell Lines | Indygreen"/>
 <meta property="og:description" content="High-efficiency LIB separator lines for lithium battery cells — designed for precise separator coating, drying, and quality assurance in cylindrical, prismatic, and pouch battery production."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/lib-separator-lines.html"/>
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="LIB Separator Lines for Lithium Battery Cell Lines | Indygreen Technologies"/>
+<meta name="twitter:title" content="LIB Separator Lines for Lithium Battery Cell Lines | Indygreen"/>
 <meta name="twitter:description" content="Precision LIB separator lines for lithium battery production — ensuring consistent separator quality and reliability for all types of lithium cells."/>
 <meta name="twitter:image" content="https://www.indygreentech.com/images/lib-separator-lines.png"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
