--- a/lithium-batteries-lines.html
+++ b/lithium-batteries-lines.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <!-- Title -->
-  <title>Lithium Battery Production Line Solutions - Indygreen Technologies</title>
+  <title>Lithium Battery Production Line Solutions | Indygreen</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies offers turnkey lithium cell and battery pack production lines for EVs and energy storage. Build advanced, cost-effective, and sustainable lithium battery manufacturing plants with global expertise."/>
@@ -18,7 +18,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Lithium Battery Production Line Solutions - Indygreen Technologies"/>
+  <meta property="og:title" content="Lithium Battery Production Line Solutions | Indygreen"/>
   <meta property="og:description" content="Turnkey lithium cell & battery pack production line solutions for EVs and energy storage. Delivering GWh-scale lithium battery plants with automation and precision."/>
   <meta property="og:url" content="https://www.indygreentech.com/lithium-batteries-lines.html"/>
   <meta property="og:type" content="website"/>
@@ -26,7 +26,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Lithium Battery Production Line Solutions - Indygreen Technologies"/>
+  <meta name="twitter:title" content="Lithium Battery Production Line Solutions | Indygreen"/>
   <meta name="twitter:description" content="Indygreen Technologies delivers turnkey lithium battery and cell production lines for EV mobility and energy storage projects worldwide."/>
 
   <!-- Canonical -->
