--- a/lithium-battery-raw-material.html
+++ b/lithium-battery-raw-material.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Title -->
-  <title>Lithium Battery Raw Materials | Cell Components & Pack Materials - Indygreen Technologies</title>
+  <title>Lithium Battery Raw Materials | Cell & Pack Components – Indygreen</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies supplies premium lithium battery raw materials including anode and cathode foils, separators, electrolytes, casings, and adhesives for advanced cell and pack manufacturing."/>
@@ -18,7 +18,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Lithium Battery Raw Materials | Cell Components & Pack Materials"/>
+  <meta property="og:title" content="Lithium Battery Raw Materials | Cell & Pack Components – Indygreen"/>
   <meta property="og:description" content="High-quality raw materials for lithium battery manufacturing — anode/cathode foils, separators, electrolytes, and casings supplied by Indygreen Technologies."/>
   <meta property="og:url" content="https://www.indygreentech.com/lithium-batteries/lithium-battery-raw-materials"/>
   <meta property="og:type" content="website"/>
@@ -26,7 +26,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Lithium Battery Raw Materials | Indygreen Technologies"/>
+  <meta name="twitter:title" content="Lithium Battery Raw Materials | Cell & Pack Components – Indygreen"/>
   <meta name="twitter:description" content="Indygreen Technologies provides complete lithium battery raw material solutions — including copper foil, aluminum foil, separators, electrolytes, and casings."/>
 
   <!-- Canonical -->
