--- a/lithium-cell-lines.html
+++ b/lithium-cell-lines.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <!-- Title -->
-  <title>Lithium Cell Production Lines | Turnkey Manufacturing Solutions - Indygreen Technologies</title>
+  <title>Lithium Cell Production Lines | Turnkey Solutions – Indygreen</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies provides turnkey lithium cell production lines for EVs and energy storage systems, including assembly, formation, testing, and quality control for high-efficiency lithium batteries."/>
@@ -18,7 +18,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Lithium Cell Production Lines | Turnkey Manufacturing Solutions"/>
+  <meta property="og:title" content="Lithium Cell Production Lines | Turnkey Solutions – Indygreen"/>
   <meta property="og:description" content="Turnkey lithium cell production lines by Indygreen Technologies – including assembly, formation, testing, and quality control for efficient lithium battery manufacturing."/>
   <meta property="og:url" content="https://www.indygreentech.com/lithium-cell-lines.html"/>
   <meta property="og:type" content="website"/>
@@ -26,7 +26,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Lithium Cell Production Lines | Turnkey Manufacturing Solutions"/>
+  <meta name="twitter:title" content="Lithium Cell Production Lines | Turnkey Solutions – Indygreen"/>
   <meta name="twitter:description" content="End-to-end turnkey lithium cell production line solutions – assembly, formation, testing, and quality control for high-efficiency lithium batteries."/>
 
   <!-- Canonical -->
