--- a/lithium-cell-raw-materials.html
+++ b/lithium-cell-raw-materials.html
@@ -3,7 +3,7 @@
 <head>
   <head>
   <!-- Title -->
-  <title>Lithium Cell Raw Materials | Battery Manufacturing Components - Indygreen Technologies</title>
+  <title>Lithium Cell Raw Materials | Battery Components – Indygreen</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies supplies high-quality lithium cell raw materials including copper foil, aluminum foil, separators, electrolytes, and casings for efficient lithium-ion battery manufacturing."/>
@@ -19,7 +19,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Lithium Cell Raw Materials | Battery Manufacturing Components"/>
+  <meta property="og:title" content="Lithium Cell Raw Materials | Battery Components – Indygreen"/>
   <meta property="og:description" content="Premium lithium cell raw materials by Indygreen Technologies – copper foil, aluminum foil, separators, electrolytes, and casings for efficient battery production."/>
   <meta property="og:url" content="https://www.indygreentech.com/lithium-cell-raw-materials.html"/>
   <meta property="og:type" content="website"/>
@@ -27,7 +27,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Lithium Cell Raw Materials | Battery Manufacturing Components"/>
+  <meta name="twitter:title" content="Lithium Cell Raw Materials | Battery Components – Indygreen"/>
   <meta name="twitter:description" content="Indygreen Technologies provides high-quality lithium cell raw materials including copper foil, aluminum foil, separators, electrolytes, and casings for lithium-ion battery production."/>
 
   <!-- Canonical -->
