--- a/news-and-events.html
+++ b/news-and-events.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
  <!-- Title Tag -->
-<title>News & Events | Indygreen Technologies – Latest Updates in Solar & Lithium Innovations</title>
+<title>News & Events | Indygreen Technologies – Latest Updates</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Stay updated with Indygreen Technologies’ latest news, industry events, and advancements in turnkey solar PV production lines, lithium battery manufacturing, and EV infrastructure solutions in India."/>
