--- a/other-machines.html
+++ b/other-machines.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Other Accessorial Equipments for Lithium Battery Production Lines | Indygreen Technologies</title>
+<title>Accessorial Equipment for Lithium Battery Lines | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies provides a range of other machines for lithium battery production lines — including auxiliary equipment, material handling, formation, and finishing solutions to support efficient battery assembly, testing, and sorting."/>
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/other-machines.html"/>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Other Accessorial Equipments for Lithium Battery Production Lines | Indygreen Technologies"/>
+<meta property="og:title" content="Accessorial Equipment for Lithium Battery Lines | Indygreen"/>
 <meta property="og:description" content="Comprehensive range of other machines supporting lithium battery production lines — including auxiliary equipment for assembly, testing, sorting, and formation processes."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/other-machines.html"/>
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="Other Accessorial Equipments for Lithium Battery Production Lines | Indygreen Technologies"/>
+<meta name="twitter:title" content="Accessorial Equipment for Lithium Battery Lines | Indygreen"/>
 <meta name="twitter:description" content="Range of auxiliary machines supporting lithium battery lines — improving efficiency, quality, and reliability in assembly, testing, and finishing processes."/>
 <meta name="twitter:image" content="https://www.indygreentech.com/images/other-machines.png"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
