--- a/prismatic-batteries-lines.html
+++ b/prismatic-batteries-lines.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Title -->
-  <title>Prismatic Battery Production Line | Assembly, Welding, Testing & Sorting - Indygreen Technologies</title>
+  <title>Prismatic Battery Production Line | Assembly & Testing – Indygreen</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies offers turnkey prismatic battery production line solutions including assembly, welding machines, cell testers, and automated sorting systems for efficient lithium battery manufacturing."/>
@@ -18,7 +18,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Prismatic Battery Production Line | Assembly, Welding, Testing & Sorting"/>
+  <meta property="og:title" content="Prismatic Battery Production Line | Assembly & Testing – Indygreen"/>
   <meta property="og:description" content="Turnkey prismatic battery production solutions – Indygreen Technologies provides assembly lines, welding machines, testers, and sorting systems for high-quality lithium battery manufacturing."/>
   <meta property="og:url" content="https://www.indygreentech.com/prismatic-batteries-lines.html"/>
   <meta property="og:type" content="website"/>
@@ -26,7 +26,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Prismatic Battery Production Line | Assembly, Welding, Testing & Sorting"/>
+  <meta name="twitter:title" content="Prismatic Battery Production Line | Assembly & Testing – Indygreen"/>
   <meta name="twitter:description" content="End-to-end prismatic battery turnkey production line solutions – including assembly, welding, testing & sorting for lithium batteries."/>
 
   <!-- Canonical -->
