--- a/prismatic-sorting-machines.html
+++ b/prismatic-sorting-machines.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Prismatic Sorting Machines for Lithium Battery Production | Indygreen Technologies</title>
+<title>Prismatic Sorting Machines for Lithium Battery Production | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies offers high-precision prismatic sorting machines for lithium battery manufacturing — enabling efficient cell grading, classification, and quality assurance for prismatic lithium cells."/>
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/prismatic-sorting-machines.html"/>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Prismatic Sorting Machines for Lithium Battery Production | Indygreen Technologies"/>
+<meta property="og:title" content="Prismatic Sorting Machines for Lithium Battery Production | Indygreen"/>
 <meta property="og:description" content="High-speed prismatic sorting machines for lithium battery production — ensuring accurate cell grading, classification, and quality control in prismatic battery lines."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/prismatic-sorting-machines.html"/>
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="Prismatic Sorting Machines for Lithium Battery Production | Indygreen Technologies"/>
+<meta name="twitter:title" content="Prismatic Sorting Machines for Lithium Battery Production | Indygreen"/>
 <meta name="twitter:description" content="Advanced prismatic sorting machines for lithium battery lines — designed for accurate cell grading, classification, and enhanced quality control."/>
 <meta name="twitter:image" content="https://www.indygreentech.com/images/prismatic-sorting-machines.png"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
