--- a/pv-reliability-turnkey-lab.html
+++ b/pv-reliability-turnkey-lab.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>PV Reliability Turnkey Lab | Solar Testing Solutions - Indygreen Technologies</title>
+<title>PV Reliability Turnkey Lab | Advanced Solar Module Testing Solutions – Indygreen Technologies</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies provides PV Reliability Turnkey Lab solutions with advanced equipment for IEC-compliant testing, certification, and performance validation of solar PV modules."/>
@@ -19,7 +19,7 @@
 <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
 <!-- Open Graph -->
-<meta property="og:title" content="PV Reliability Turnkey Lab | Solar Testing Solutions - Indygreen Technologies"/>
+<meta property="og:title" content="PV Reliability Turnkey Lab | Advanced Solar Module Testing Solutions – Indygreen Technologies"/>
 <meta property="og:description" content="Indygreen Technologies delivers PV Reliability Turnkey Lab solutions with advanced IEC-compliant testing equipment for certification and validation of solar PV modules."/>
 <meta property="og:url" content="https://www.indygreentech.com/pv-reliability-turnkey-lab.html"/>
 <meta property="og:type" content="website"/>
@@ -27,7 +27,7 @@
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="PV Reliability Turnkey Lab | Solar Testing Solutions"/>
+<meta name="twitter:title" content="PV Reliability Turnkey Lab | Advanced Solar Module Testing Solutions – Indygreen Technologies"/>
 <meta name="twitter:description" content="Advanced PV Reliability Turnkey Lab by Indygreen Technologies for IEC-compliant solar PV module testing, certification, and performance validation."/>
 
 <!-- Canonical -->
