--- a/raw-materials.html
+++ b/raw-materials.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Title -->
-  <title>Solar PV Raw Materials | Aluminum Frames & Solar Cells - Indygreen Technologies</title>
+  <title>Solar PV Raw Materials | Frames & Cells – Indygreen</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies supplies high-quality solar PV raw materials including aluminum frames and high-efficiency solar cells. Reliable, durable, and cost-effective solutions for solar panel manufacturing."/>
@@ -18,7 +18,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Solar PV Raw Materials | Aluminum Frames & Solar Cells - Indygreen Technologies"/>
+  <meta property="og:title" content="Solar PV Raw Materials | Frames & Cells – Indygreen"/>
   <meta property="og:description" content="Get durable aluminum frames and high-efficiency solar cells from Indygreen Technologies – trusted supplier of solar PV raw materials worldwide."/>
   <meta property="og:url" content="https://www.indygreentech.com/raw-materials.html"/>
   <meta property="og:type" content="website"/>
@@ -26,7 +26,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Solar PV Raw Materials | Aluminum Frames & Solar Cells"/>
+  <meta name="twitter:title" content="Solar PV Raw Materials | Frames & Cells – Indygreen"/>
   <meta name="twitter:description" content="Indygreen Technologies provides premium raw materials for solar panel production – including aluminum frames and solar cells."/>
 
   <!-- Canonical -->
