--- a/welding-machines.html
+++ b/welding-machines.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Welding Machines for Lithium Battery Assembly, Testing & Sorting | Indygreen Technologies</title>
+<title>Welding Machines for Lithium Battery Assembly, Testing & Sorting | Indygreen </title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies provides advanced welding machines for lithium battery assembly, testing, and sorting lines — enabling precise tab welding, ultrasonic, and laser welding solutions for cylindrical, prismatic, and pouch cells."/>
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/welding-machines.html"/>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Welding Machines for Lithium Battery Assembly, Testing & Sorting | Indygreen Technologies"/>
+<meta property="og:title" content="Welding Machines for Lithium Battery Assembly, Testing & Sorting | Indygreen "/>
 <meta property="og:description" content="High-precision welding machines for lithium battery production — designed for efficient tab, laser, and ultrasonic welding in assembly, testing, and sorting lines."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/welding-machines.html"/>
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="Welding Machines for Lithium Battery Assembly, Testing & Sorting | Indygreen Technologies"/>
+<meta name="twitter:title" content="Welding Machines for Lithium Battery Assembly, Testing & Sorting | Indygreen "/>
 <meta name="twitter:description" content="Precision welding machines engineered for lithium battery assembly lines — supporting ultrasonic, laser, and tab welding technologies."/>
 <meta name="twitter:image" content="https://www.indygreentech.com/images/welding-machine.png"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
