--- a/agv-auto-transportation.html
+++ b/agv-auto-transportation.html
@@ -3,7 +3,7 @@
 <head>
   <head>
  <!-- Title -->
-  <title>AGV Auto Transportation | Smart Material Handling Solutions - Indygreen Technologies</title>
+  <title>AGV Auto Transportation | Smart Material Handling Solutions - Indygreen </title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies provides AGV auto transportation systems for smart, automated material handling in lithium battery and solar manufacturing lines, improving efficiency and safety."/>
@@ -19,7 +19,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="AGV Auto Transportation | Smart Material Handling Solutions"/>
+  <meta property="og:title" content="AGV Auto Transportation | Smart Material Handling Solutions - Indygreen"/>
   <meta property="og:description" content="Automated guided vehicles (AGVs) by Indygreen Technologies provide intelligent, safe, and efficient material transportation across solar and battery production facilities."/>
   <meta property="og:url" content="https://www.indygreentech.com/agv-auto-transportation.html"/>
   <meta property="og:type" content="website"/>
@@ -27,7 +27,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="AGV Auto Transportation | Smart Material Handling Solutions"/>
+  <meta name="twitter:title" content="AGV Auto Transportation | Smart Material Handling Solutions - Indygreen"/>
   <meta name="twitter:description" content="Indygreen Technologies offers automated guided vehicle (AGV) systems for efficient material movement in battery and solar manufacturing lines."/>
 
   <!-- Canonical -->
