--- a/automatic-lines.html
+++ b/automatic-lines.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Automatic Lines for Prismatic Lithium Battery Manufacturing | Indygreen Technologies</title>
+<title>Automatic Prismatic Battery Lines | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies delivers fully automatic lines for prismatic lithium battery manufacturing — integrating advanced automation for cell assembly, welding, formation, and testing to enhance production efficiency and quality."/>
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/automatic-lines.html"/>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Automatic Lines for Prismatic Lithium Battery Manufacturing | Indygreen Technologies"/>
+<meta property="og:title" content="Automatic Prismatic Battery Lines | Indygreen"/>
 <meta property="og:description" content="Fully automated lines for prismatic lithium battery production — designed for high-speed cell assembly, welding, and testing with maximum efficiency and precision."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/automatic-lines.html"/>
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="Automatic Lines for Prismatic Lithium Battery Manufacturing | Indygreen Technologies"/>
+<meta name="twitter:title" content="Automatic Prismatic Battery Lines | Indygreen"/>
 <meta name="twitter:description" content="Indygreen Technologies offers advanced automatic lines for prismatic lithium battery assembly, welding, and testing — ensuring speed, accuracy, and superior quality."/>
 <meta name="twitter:image" content="https://www.indygreentech.com/images/automatic-line.png"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
