--- a/casing.html
+++ b/casing.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>LIB Cell Casings for Lithium Cell Lines | Indygreen Technologies</title>
+<title>LIB Cell Casings for Lithium Cell Lines | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies supplies high-quality battery casings for lithium Cell Lines — ensuring robust protection, safety, and durability for cylindrical, prismatic, and pouch cells."/>
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/casing.html"/>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="LIB Cell Casings for Lithium Cell Lines | Indygreen Technologies"/>
+<meta property="og:title" content="LIB Cell Casings for Lithium Cell Lines | Indygreen"/>
 <meta property="og:description" content="Premium battery casings for lithium battery production — designed for safety, durability, and protection in cylindrical, prismatic, and pouch cells."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/casing.html"/>
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="LIB Cell Casings for Lithium Cell Lines | Indygreen Technologies"/>
+<meta name="twitter:title" content="LIB Cell Casings for Lithium Cell Lines | Indygreen"/>
 <meta name="twitter:description" content="High-quality battery casings for lithium battery production — ensuring safety, durability, and protection for cylindrical, prismatic, and pouch cells."/>
 <meta name="twitter:image" content="https://www.indygreentech.com/images/casings.png"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
