--- a/cylindrical-batteries-lines.html
+++ b/cylindrical-batteries-lines.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting - Indygreen Technologies</title>
+  <title>Cylindrical Battery Production Line | Assembly & Testing – Indygreen</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies delivers turnkey cylindrical battery production solutions including assembly lines, welding machines, advanced cell testers, and automated sorting machines for high-quality lithium battery manufacturing."/>
@@ -17,7 +17,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting"/>
+  <meta property="og:title" content="Cylindrical Battery Production Line | Assembly & Testing – Indygreen"/>
   <meta property="og:description" content="Turnkey cylindrical battery production line by Indygreen Technologies – including assembly lines, welding machines, precise cell testers, and automated sorting machines."/>
   <meta property="og:url" content="https://www.indygreentech.com/cylindrical-batteries-lines.html"/>
   <meta property="og:type" content="website"/>
@@ -25,7 +25,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting"/>
+  <meta name="twitter:title" content="Cylindrical Battery Production Line | Assembly & Testing – Indygreen"/>
   <meta name="twitter:description" content="End-to-end cylindrical battery turnkey production line solutions – assembly, welding, testing & sorting for lithium batteries."/>
 
   <!-- Canonical -->
