--- a/cylindrical-battery-pack-testers.html
+++ b/cylindrical-battery-pack-testers.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Cylindrical Battery Pack Testers for Lithium Batteries | Indygreen Technologies</title>
+<title>Cylindrical Battery Pack Testers for Lithium Batteries | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies provides advanced Cylindrical battery pack testers for lithium batteries — enabling accurate testing of voltage, capacity, performance, and safety of assembled battery packs for electric vehicles, energy storage, and industrial applications."/>
