--- a/lithium-cells.html
+++ b/lithium-cells.html
@@ -3,7 +3,7 @@
 <head>
   <head>
   <!-- Title -->
-  <title>Lithium Cells | High-Performance Li-ion Cell Solutions - Indygreen Technologies</title>
+  <title>Lithium Cells | High-Performance Li-ion Solutions – Indygreen</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies provides high-quality lithium-ion cells for EVs, ESS, and consumer applications. Explore cylindrical, prismatic, and pouch cells with superior performance and safety standards."/>
@@ -19,7 +19,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd."/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Lithium Cells | High-Performance Li-ion Cell Solutions"/>
+  <meta property="og:title" content="Lithium Cells | High-Performance Li-ion Solutions – Indygreen"/>
   <meta property="og:description" content="Indygreen Technologies supplies advanced lithium-ion cells including cylindrical, prismatic, and pouch types for electric vehicles, ESS, and industrial applications."/>
   <meta property="og:url" content="https://www.indygreentech.com/lithium-cells.html"/>
   <meta property="og:type" content="website"/>
@@ -27,7 +27,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Lithium Cells | High-Performance Li-ion Cell Solutions"/>
+  <meta name="twitter:title" content="Lithium Cells | High-Performance Li-ion Solutions – Indygreen"/>
   <meta name="twitter:description" content="Explore advanced lithium-ion cells from Indygreen Technologies — cylindrical, prismatic, and pouch formats for EVs and energy storage systems."/>
 
   <!-- Canonical -->
