--- a/prismatic-battery-pack-testers.html
+++ b/prismatic-battery-pack-testers.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Prismatic Battery Pack Testers for Lithium Batteries | Indygreen Technologies</title>
+<title>Prismatic Battery Pack Testers for Lithium Batteries | Indygreen</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies provides advanced Prismatic battery pack testers for lithium batteries — enabling accurate testing of voltage, capacity, performance, and safety of assembled battery packs for electric vehicles, energy storage, and industrial applications."/>
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/prismatic-battery-pack-testers.html"/>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Prismatic Battery Pack Testers for Lithium Batteries | Indygreen Technologies"/>
+<meta property="og:title" content="Prismatic Battery Pack Testers for Lithium Batteries | Indygreen"/>
 <meta property="og:description" content="High-precision Prismatic battery pack testers for lithium batteries — designed for accurate voltage, capacity, performance, and safety testing of assembled battery packs."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/prismatic-battery-pack-testers.html"/>
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="Prismatic Battery Pack Testers for Lithium Batteries | Indygreen Technologies"/>
+<meta name="twitter:title" content="Prismatic Battery Pack Testers for Lithium Batteries | Indygreen"/>
 <meta name="twitter:description" content="Advanced Prismatic battery pack testers for lithium batteries — ensuring accuracy, reliability, and safety in EVs, BESS, and industrial applications."/>
 <meta name="twitter:image" content="https://www.indygreentech.com/images/prismatic-battery-pack-tester.png"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
