--- a/turnkey-assembly-lines.html
+++ b/turnkey-assembly-lines.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Turnkey Assembly Lines for Cylindrical Lithium Batteries | Indygreen Technologies</title>
+<title>Turnkey Assembly Lines for Cylindrical Lithium Batteries | Indygreen </title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies offers complete turnkey assembly lines for cylindrical lithium battery manufacturing — including automation systems for welding, testing, sorting, and cell assembly to ensure efficient production and quality control."/>
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/turnkey-assembly-lines.html"/>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Turnkey Assembly Lines for Cylindrical Lithium Batteries | Indygreen Technologies"/>
+<meta property="og:title" content="Turnkey Assembly Lines for Cylindrical Lithium Batteries | Indygreen "/>
 <meta property="og:description" content="Complete turnkey assembly lines for cylindrical lithium battery production — automation for welding, testing, sorting, and cell assembly to ensure efficiency and precision."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/turnkey-assembly-lines.html"/>
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="Turnkey Assembly Lines for Cylindrical Lithium Batteries | Indygreen Technologies"/>
+<meta name="twitter:title" content="Turnkey Assembly Lines for Cylindrical Lithium Batteries | Indygreen "/>
 <meta name="twitter:description" content="High-performance turnkey assembly lines for cylindrical lithium battery manufacturing — from cell assembly to testing and sorting automation."/>
 <meta name="twitter:image" content="https://www.indygreentech.com/images/turnkey-assembly-lines.png"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
